Se modificaron los pages de Nosotrosy Boxes para que tuviera un contenido mas apropiado siendo responsive. Se modifico el link del css por el que corresponde que tiene la compilacion de scss.Tambien se corrigieron los colores de botones y fondos para que esten dentro de la misma paleta de colores.

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -23,6 +23,13 @@ nav,ul,li {
     
     margin-right 0px;
 }
+.botonera {
+    background-color: $botoncolor;
+}
+
+.botonera img {
+    width: auto;
+}
 
 nav,ul,li,a {
     color: $secondaryColor;
