--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,5 +1,9 @@
 $maincolor: beige;
 $secondaryColor:black;
-$mainfont:  'Montserrat', sans-serif
+$botoncolor: darksalmon;
+$mainfont:  'Montserrat', sans-serif;
+$backcolor: rgb(243, 220, 212);
+
+
 
 
