--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,4 +1,4 @@
-h1,h2 {
+h1 h2 {
     font-family: $mainfont;
     font-weight: 600px;
     font-size: 28px;
@@ -12,25 +12,50 @@ p {
 
 body {
     background-image: url(../img/background/background.png);
-    width: 100%;
+    
     }
 
 .text-center {
     text-align: center
 }
 .contenedor {
-    width: 85%;
+    width: 100%;
     height: auto;
-    margin: 5%;
-    padding: 50px 35px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
 }
 img {
     max-width: 100%;
     height: auto;
 }
-@media (max-width: 991px) {
-    img {
-        max-width: 50%;
-    }
+.btn-secondary {
+    background-color: $botoncolor;
+}
+.slide {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    height: 80%;
+    width: 100%;
+}
+
+.slide p {
+    color: $secondaryColor;
+    background-color: gray;
+
+}
+
+.slide h2 {
+    color: rgb(95, 95, 82);
+}
+.card-boxes{
+    background-color: $backcolor;
+}
+form {
+    padding: 70px 75px 115px 75px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    text-align: center;
+    width: 340px;
+    background-color: $backcolor;
 }
