--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,20 +1,20 @@
-@media (max-width: 991px)
-{
-        body{
-            padding: 30px;
-        }
-        form{
-            padding: 40px 20px;
-            width: 100%;
-        }
-    }
+@media (max-width: 1140px) {
+    body {
+        padding: 30px;
+     }
+
+}
 
 img {
     max-width: 100%;
     height: auto;
 }
-@media (max-width: 991px) {
+
+@media (max-width: 330px) {
+    
     img {
-        max-width: 50%;
+        max-width: 100%;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 }
